2006-03-11  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.h:
	Improve doxygen formatting, and attempt to clarify the 1:1 ratio of
	successful PrepareCopy()s to DoneCopy()s.
	
2006-03-11  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: jbarnes

	* exa/exa_accel.c: (exaCopyNtoNTwoDir):
	Make exaCopyNtoNTwoDir() call DoneCopy() at the end of each string of
	consecutive Copy() calls (rather than exactly once at the end of the
	function).

2006-03-10  Kristian Høgsberg  <krh@redhat.com>

	* Merge accel_indirect branch to HEAD.

2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (DoGetDrawableAttributes): Add
	GLX_Y_INVERTED_EXT to the drawable attributes we report.
	
2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Create the fbconfig
	for the composite 32 visual after the fact here.

	* GL/glx/glxdri.c (__glXDRIbindTexImage): Use 4bpp for 32 bit
	visuals too, but only fill the alpha channel for 24 depth
	drawables.

2006-03-03  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (getDrawableInfo): Work around i915 driver that
	tries to render to drawable even if it no longer exists.
	Returning 0 cliprects (as dri_util.c does) doesn't seem to do it,
	so we set the width and height to 0.
	
	* GL/glx/g_disptab.h: 
	* GL/glx/glxcmdsswap.c: Fix a couple of warnings.

2006-03-03  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Log full DRI driver path
	when dlopen() fails.

	* GL/glx/glxscreens.c (__glXInitScreens): Log the provider name
	when we initialize a GLX screen.

	* GL/symlink-mesa.sh: 
	* GL/mesa/swrast/Makefile.am: Update to work with mesa head.

2006-03-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/glxdri.c: (__glXDRIscreenProbe):
	Pass err_msg when dev_priv allocation fails.

2006-03-01  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Handle failing allocation
	of dev_priv.
	